# travel_fastapi

./: Makefile  README.md  alembic.ini  pyproject.toml
_fastapi_doc_ai/: dependencies_reusable_docai.md  list_filter_docai.md  operation_security_docai.md
migration/: env.py
migration/versions/: 121562881b10_initiate.py  34a2dc7a16f8_email_updating.py  3ea31eab6a98_default_ride_setting.py  6237e965ac99_image_replace_with_file_url.py  6612e8869fe8_review.py  6802a57419d1_initial.py  77e91a9cc18a_user_should_unique.py  905c8a151a4d_otp_added.py  952427bf4422_ride_model_added.py  95c1c472b5be_auto.py  eda59e889be2_created_at_media.py
migrations/: env.py
migrations/versions/: 0d1cf1c9daad_auto.py  2296adfbea30_initiate.py  26cc6b8bba69_email_is_reuqired_now.py  274c1f54fca3_auto.py  316b39a37ff3_auto.py  338c4caa1e7c_auto.py  3d9c442678cb_auto.py  a5691fa71ccc_user_phone.py  ea94b60c2aaf_auto.py  f681b4829f29_auto.py
src/: config.py  main.py
src/api/core/: __init__.py  response.py  security.py  smtp.py  utility.py
src/api/core/dependencies/: __init__.py  query_params.py
src/api/core/middleware/: decorator.py
src/api/core/operation/: __init__.py  list_operation_helper.py  media.py
src/api/models/: __init__.py  baseModel.py  defaultRideSettingModel.py  mediaModel.py  reviewModel.py  rideModel.py  roleModel.py  userModel.py
src/api/routers/: authRoute.py  defaultRideSettingRoute.py  mediaRoute.py  reviewRoute.py  rideRoute.py  userRoute.py  verifymeRoute.py
src/templates/: email_verification.html  reset_password.html
